--- a/public/mac_implementation.html
+++ b/public/mac_implementation.html
@@ -233,7 +233,7 @@
     
     <script>
         // Configuration
-        const API_BASE_URL = 'http://localhost:5000';
+        const API_BASE_URL = 'https://mac-scheme-simulation-forgery-attack.onrender.com';
         let currentSessionId = null;
         
         // DOM elements
