--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
   <body>
     <div id="message">
       <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+      <h1>MAC Scheme Simulation & Forgery Attack</h1>
+      <p>Explore how MAC schemes work and learn about forgery attacks through interactive simulations.</p>
+      <a href="mac_implementation.html">Open MAC Implementation Lab</a>
     </div>
     <p id="load">Firebase SDK Loading&hellip;</p>
 
